# fellowship_sim

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mechanics_to_test.md  planned_tests.md  pyproject.toml  todo.md  tox.ini
.claude/: CLAUDE.md
documentation/: architecture.md  game_mechanics.md  recipes.md  test_architecture.md
llm/: project_architecture.md
scripts/: compare.py  compare_builds.py  interactive_example__barrage.py  run_sim.py  simple_example__barrage.py  simple_example__highwind.py
src/fellowship_sim/: __init__.py  logging_setup.py
src/fellowship_sim/base_classes/: __init__.py  ability.py  combat.py  config.py  effect.py  entity.py  events.py  real_ppm.py  setup.py  state.py  stats.py  timed_events.py
src/fellowship_sim/elarion/: ability.py  buff.py  builds.py  effect.py  entity.py  setup.py  setup_effect.py
src/fellowship_sim/generic_game_logic/: buff.py  gems.py  set_effects.py  setup_effect.py  weapon_abilities.py  weapon_traits.py
src/fellowship_sim/simulation/: __init__.py  base.py  metrics.py  plots.py  rotation.py  runner.py  scenarios.py
tests/: conftest.py
tests/functional/: conftest.py
tests/functional/elarion/: test_cast_times.py  test_cdr.py  test_crit_rates.py  test_entity_kill.py  test_focus.py  test_gems.py  test_legendaries.py  test_main_stat_calculation.py  test_mark_proc.py  test_red_gem_1.py  test_scenarios.py  test_spirit_proc.py
tests/functional/generic_game_logic/: test_amethyst_splinters.py
tests/integration/: conftest.py  fixtures.py
tests/integration/elarion/: test_ability_interactions.py  test_cooldown_reduction.py  test_damage_scaling.py  test_focus_economy.py  test_lunarlight.py  test_proc_mechanics.py  test_target_count.py  test_timing.py
tests/integration/generic_game_logic/: test_amethyst_splinters.py  test_buffs.py  test_entity_kill.py  test_gems.py  test_set_effects.py  test_weapon_abilities.py  test_weapon_traits.py
tests/unit/: test_fixtures.py
tests/unit/base_classes/: test_ability.py  test_combat.py  test_config.py  test_effect.py  test_entity.py  test_events.py  test_real_ppm.py  test_state.py  test_stats.py  test_timed_events.py
tests/unit/elarion/: test_ability.py  test_buff.py  test_effect.py  test_setup.py  test_setup_effect.py
tests/unit/generic_game_logic/: test_buff.py  test_effect.py  test_gems.py  test_set_effects.py  test_setup_effect.py  test_weapon_abilities.py  test_weapon_traits.py
tests/unit/simulation/: test_base.py  test_metrics.py  test_rotation.py  test_runner.py  test_scenarios.py
(+5 files in other folders)
