[project]
name = "fellowship-sim"
version = "0.0.1"
description = "A simple simulation model for the game fellowship"
authors = [{ name = "MaxiQE", email = "maxiqe@gmail.com" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.12,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "loguru>=0.7",
]

[project.urls]
Repository = "https://github.com/maxiQE/fellowship-sim"

[dependency-groups]
dev = [
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    
    "ty>=0.0.20",
    "pytest>=8.4.2",
    "ruff>=0.11.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fellowship_sim"]

[tool.ty.environment]
python = "./.venv"
python-version = "3.12"

[tool.ty.rules]
# Flag inferred Unknown types in function signatures — equivalent to TypeScript's noImplicitAny.
unknown-argument = "error"
invalid-return-type = "error"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "integration_tests.py"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-annotations (missing type annotations)
    "ANN",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # Ambiguous characters
    "RUF001", "RUF002", "RUF003",
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # typing.Any is acceptable for sentinel __getattr__/__setattr__ and noop implementations
    "ANN401",
]
exclude = [
    "scripts/*.py",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",
    # Variable is unused
    "RUF059", "F841",
]
"scripts/*" = ["S101", "S311"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src"]
